--- a/docs/templates/base.html
+++ b/docs/templates/base.html
@@ -37,13 +37,14 @@
 				localStorage.setItem('firebaseErrorTest', 'test');
 			}
 			catch (e) {
+				console.log(e)
 				if (e.message === 'The quota has been exceeded.') {
 					// using Safari(desktop & iOS) or Chrome(iOS) w/ private, localStorage not supported
 					// firebase will throw error, so better to alert user now
-					alert("Private browsing is not supported on Safari and the Chrome IOS app. " + 
+					alert("Private browsing is not supported on Safari or the Chrome IOS app. " + 
 					"Turn off private browsing or use a supported private browsing app.");
 				}
-				throw 'privateBrowsingError';
+				throw 'notEnoughLocalStorage';
 			}
 		</script>
 	
@@ -86,6 +87,9 @@
 						<li class="nav-item px-lg-4">
 							<a class="nav-link text-uppercase text-expanded" href="/calendar.html">Calendar</a>
 						</li>
+						<li class="nav-item px-lg-4">
+							<a class="nav-link text-uppercase text-expanded" href="/directory.html">Directory</a>
+						</li>
 
 
 						<li class="nav-item dropdown">
@@ -113,7 +117,7 @@
 							<h2 class="primary-heading">Work in Progress</h2>
 
 
-							<p>This page is not done yet! We apologize for any inconvenience this may cause.</p>
+							<p>This page is not done yet! We apologize for any inconvenience this may cause.<br>Code BASE_404</p>
 						</div>
 					</div>
 				</div>
