--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,7 @@
 		<link rel="icon" type="image/png" href="/favicons/favicon-16x16.png" sizes="16x16">
 	{% endblock %}
 	{% block styles %}{% endblock %}
-	{% block checkFirebaseError %}
+	{% block firebaseErrorCheck %}
 		<script>
 			try {
 				localStorage.setItem('firebaseErrorTest', 'test');
