--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,7 +42,7 @@
 				if (e.message === 'The quota has been exceeded.') {
 					// using Safari(desktop & iOS) or Chrome(iOS) w/ private, localStorage not supported
 					// firebase will throw error, so better to alert user now
-					alert("Private browsing is not supported on Safari or the Chrome IOS app. " + 
+					alert("Private browsing is not supported on Safari or the Chrome IOS app. " +
 					"Turn off private browsing or use a supported private browsing app.");
 				}
 				throw 'notEnoughLocalStorage';
@@ -79,8 +79,8 @@
 
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav mx-auto">
-					
-						
+
+
 						<li class="nav-item px-lg-4">
 							<a class="nav-link text-uppercase text-expanded" href="/">Home</a>
 						</li>
@@ -93,6 +93,9 @@
 						</li>
 						<li class="nav-item px-lg-4">
 							<a class="nav-link text-uppercase text-expanded" href="/event-pages.html">Event Pages</a>
+						</li>
+						<li class="nav-item px-lg-4">
+							<a class="nav-link text-uppercase text-expanded" href="/pictures.html">Pictures</a>
 						</li>
 
 
@@ -136,7 +139,7 @@
 			</div>
 		</footer>
 	{% endblock %}
-	
+
 	{% block firebase %}
 		<script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-app.js">
 		</script>
