--- a/docs/css/t485.css
+++ b/docs/css/t485.css
@@ -1,1 +1,1 @@
-#header{display:block;margin-left:auto;margin-right:auto;max-width:100%;height:auto;width:auto\9}.hidden{display:none}.invisible{visibility:hidden}
+#header{display:block;margin-left:auto;margin-right:auto;max-width:100%;height:auto;width:auto\9}.hidden{display:none!important}.invisible{visibility:hidden!important}
