--- a/docs/templates/base.html
+++ b/docs/templates/base.html
@@ -129,7 +129,7 @@
 	
 	
 
-		<div class="container">
+		<div class="container" id="mainContainer">
 			
 
 				<div class="row">
@@ -145,6 +145,22 @@
 				</div>
 			
 		</div>
+	
+	
+	<div class="container" id="unexpectederror">
+
+		<div class="row">
+			<div class="box">
+				<div class="col-lg-12">
+					<h2 class="error">An Unexpected Error Occured</h2>
+
+
+					<p>Please report this bug or try again in a few minutes. <b>Code <span id="unexpectederror-code">UNKNOWN_ERR</span></b></p>
+
+				</div>
+			</div>
+		</div>
+	</div>
 	
 	
 
