add action url for forgot password

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -149,7 +149,7 @@
 		</div>
 	{% endblock %}
 	{% block unexpectederror %}
-	<div class="container" id="unexpectederror">
+	<div class="container hidden" id="unexpectederror">
 
 		<div class="row">
 			<div class="box">
