--- a/docs/templates/base.html
+++ b/docs/templates/base.html
@@ -147,7 +147,7 @@
 		</div>
 	
 	
-	<div class="container" id="unexpectederror">
+	<div class="container hidden" id="unexpectederror">
 
 		<div class="row">
 			<div class="box">
