--- a/app/css/t485.scss
+++ b/app/css/t485.scss
@@ -6,9 +6,28 @@
     height: auto;
     width: auto\9;
 }
+
+
+.feedback {
+  background-color : #31B0D5;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+  border-color: #46b8da;
+  .&:hover {
+	width: 30px;
+  }
+}
+
+#feedback {
+    position: fixed;
+    bottom: -4px;
+    right: 10px;
+}
+
 .hidden {
-    display:none !important;/*hidden and default are ALWAYS applied*/
+    display:none !important;/* hidden and default are ALWAYS applied*/
 }
 .invisible {
-    visibility:hidden !important;/*hidden and default are ALWAYS applied*/
+    visibility:hidden !important;/* invisible and default are ALWAYS applied*/
 }
