--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -180,6 +180,13 @@
 			</div>
 		</footer>
 	{% endblock %}
+	{% block feedback %}
+		<div id="feedback">
+			<button class="feedback btn btn-primary-outline">Feedback</button>
+		</div>
+
+	{% endblock %}
+
 
 	{% block firebase %}
 		<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-app.js">
