update feedback button

--- a/app/css/theme.scss
+++ b/app/css/theme.scss
@@ -4,7 +4,7 @@
 /* CSS based on start bootstrap buisness casual theme, MIT licensed. The modified content is not licensed*/
 
 body {
-    font-family: Lora;
+    font-family: Lora, serif;
     background: green;
 }
 
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: Raleway;
+    font-family: Raleway, serif;
 }
 
 p {
