--- a/app/css/t485.scss
+++ b/app/css/t485.scss
@@ -14,8 +14,8 @@
   padding: 10px 20px;
   border-radius: 4px;
   border-color: #46b8da;
-  .&:hover {
-	width: 30px;
+  &:hover {
+	height: 50px;
   }
 }
 
